force-app/main/default/objects/EMS_TM_Assignment__c/EMS_TM_Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>A.ID-{0000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>