force-app/main/default/objects/EMS_TM_Assignment__c/fields/Client_Project__c.field-meta.xml
<CustomField>
    <fullName>Client_Project__c</fullName>
    <formula>IF(ISPICKVAL(EMS_TM_ProjectName_Asgn__r.Type_Of_Project__c,&apos;Client Projects&apos;), True,false)</formula>
    <label>Client Project</label>
    <type>Checkbox</type>
</CustomField>