force-app/main/default/objects/EMS_TM_Assignment__c/fields/Daily_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Bill_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Bill Rate</label>
    <type>Checkbox</type>
</CustomField>