force-app/main/default/objects/EMS_TM_Assignment__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>EMS_TM_EmployeeName__r.FirstName +&apos; &apos;+ EMS_TM_EmployeeName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>