force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_Allocation__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Allocation__c</fullName>
    <description>EMS_TM_ProjectName_Asgn__c</description>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>