force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_AssignedAs__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_AssignedAs__c</fullName>
    <label>Assigned As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Application Designer</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant Architect</fullName>
            </value>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>Data Engineer</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>DevOps Engineer</fullName>
            </value>
            <value>
                <fullName>Lead Business Analyst</fullName>
            </value>
            <value>
                <fullName>Lead Data Engineer</fullName>
            </value>
            <value>
                <fullName>Lead Developer</fullName>
            </value>
            <value>
                <fullName>Lead Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Security Engineer</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Accounting Manager</fullName>
                <isActive>false</isActive>
                <label>Accounting Manager</label>
            </value>
            <value>
                <fullName>Accounts Executive</fullName>
                <isActive>false</isActive>
                <label>Accounts Executive</label>
            </value>
            <value>
                <fullName>Analysis</fullName>
                <isActive>false</isActive>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Associate BSA</fullName>
                <isActive>false</isActive>
                <label>Associate BSA</label>
            </value>
            <value>
                <fullName>Associate Developer</fullName>
                <isActive>false</isActive>
                <label>Associate Developer</label>
            </value>
            <value>
                <fullName>Associate Engineer</fullName>
                <isActive>false</isActive>
                <label>Associate Engineer</label>
            </value>
            <value>
                <fullName>Associate Quality Analyst</fullName>
                <isActive>false</isActive>
                <label>Associate Quality Analyst</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>