force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_AssignedOn__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_AssignedOn__c</fullName>
    <label>Assigned On</label>
    <type>Date</type>
</CustomField>