force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_EndDate_Asgn__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_EndDate_Asgn__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>