force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_Numberofallocatedhours__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Numberofallocatedhours__c</fullName>
    <description>Number of hours/week the employee is allocated to the project.</description>
    <label>Number of allocated hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>