force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_ProjectName_Asgn__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_ProjectName_Asgn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>EMS_TM_Project__c.Type_Of_Project__c</field>
            <operation>notEqual</operation>
            <value>Global Projects</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Project Assignees</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>