force-app/main/default/objects/EMS_TM_Assignment__c/fields/EMS_TM_StartDate_Asgn__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_StartDate_Asgn__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>