force-app/main/default/objects/EMS_TM_Assignment__c/fields/Friday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Hours__c</fullName>
    <label>Friday Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>