force-app/main/default/objects/EMS_TM_Assignment__c/fields/Offshore_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Manager_Name__c</fullName>
    <formula>EMS_TM_ProjectName_Asgn__r.Offshore_Project_Manager__r.ContactName__c</formula>
    <label>Offshore Manager Name</label>
    <type>Text</type>
</CustomField>