force-app/main/default/objects/EMS_TM_Assignment__c/fields/Offshore_PM_Configure__c.field-meta.xml
<CustomField>
    <fullName>Offshore_PM_Configure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>will be auto-checked when the PM Confic record is created for Offshore</description>
    <label>Offshore PM Configure</label>
    <type>Checkbox</type>
</CustomField>