force-app/main/default/objects/EMS_TM_Assignment__c/fields/Onshore_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Onshore_Manager_Name__c</fullName>
    <formula>EMS_TM_ProjectName_Asgn__r.Project_Manager__r.ContactName__c</formula>
    <label>Onshore Manager Name</label>
    <type>Text</type>
</CustomField>