force-app/main/default/objects/EMS_TM_Assignment__c/fields/Onshore_PM_Configure__c.field-meta.xml
<CustomField>
    <fullName>Onshore_PM_Configure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onshore PM Configure</label>
    <type>Checkbox</type>
</CustomField>