force-app/main/default/objects/EMS_TM_Assignment__c/fields/Other_PM_Configure__c.field-meta.xml
<CustomField>
    <fullName>Other_PM_Configure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other PM Configure</label>
    <type>Checkbox</type>
</CustomField>