force-app/main/default/objects/EMS_TM_Assignment__c/fields/Other_Resource_PM_Configure__c.field-meta.xml
<CustomField>
    <fullName>Other_Resource_PM_Configure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Resource PM Configure</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Assignees (Other Resource PM Configure)</relationshipLabel>
    <relationshipName>Project_Assignees</relationshipName>
    <type>Lookup</type>
</CustomField>