force-app/main/default/objects/EMS_TM_Assignment__c/fields/Others_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Others_Contact_Name__c</fullName>
    <formula>Other_Resource_PM_Configure__r.ContactName__c</formula>
    <label>Others Contact Name</label>
    <type>Text</type>
</CustomField>