force-app/main/default/objects/EMS_TM_Assignment__c/fields/Project_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Project_Allocation__c</fullName>
    <inlineHelpText>Percentage of effort allocated for this project</inlineHelpText>
    <label>Project Allocation %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>