force-app/main/default/objects/EMS_TM_Assignment__c/fields/Resource_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Full_Name__c</fullName>
    <formula>EMS_TM_EmployeeName__r.FirstName+&apos; &apos;+EMS_TM_EmployeeName__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Full Name</label>
    <type>Text</type>
</CustomField>