force-app/main/default/objects/EMS_TM_Assignment__c/fields/Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>Resource_Status__c</fullName>
    <formula>Case(EMS_TM_EmployeeName__r.EMS_RM_ApplicantStatus_Update__c, &apos;Active&apos;, &apos;Active&apos;,&apos;Active - Probation&apos;,&apos;Active-Probation&apos;,&apos;Active - Notice Period&apos;,&apos;Active - Notice Period&apos;,&apos;Inactive&apos;,&apos;Inactive&apos;,&apos;Other&apos;)</formula>
    <label>Resource Status</label>
    <type>Text</type>
</CustomField>