force-app/main/default/objects/EMS_TM_Assignment__c/fields/Resource_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_User_Id__c</fullName>
    <formula>EMS_TM_EmployeeName__r.EMS_TM_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource User Id</label>
    <type>Text</type>
</CustomField>