force-app/main/default/objects/EMS_TM_Assignment__c/fields/Saturday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Hours__c</fullName>
    <label>Saturday Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>