force-app/main/default/objects/EMS_TM_Assignment__c/fields/Wednesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Hours__c</fullName>
    <label>Wednesday Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>