force-app/main/default/objects/EMS_TM_Assignment__c/validationRules/assignment_based_on_project_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>assignment_based_on_project_dates</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_TM_EndDate_Asgn__c  &gt;  EMS_TM_ProjectName_Asgn__r.EMS_TM_EndDate__c   ||  EMS_TM_EndDate_Asgn__c  &lt;  EMS_TM_ProjectName_Asgn__r.EMS_TM_StartDate__c</errorConditionFormula>
    <errorDisplayField>EMS_TM_EndDate_Asgn__c</errorDisplayField>
    <errorMessage>End Date of your Assignment should be in between the project Start Date and End Date</errorMessage>
</ValidationRule>