force-app/main/default/objects/EMS_TM_Assignment__c/validationRules/End_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_TM_EndDate_Asgn__c &lt; EMS_TM_StartDate_Asgn__c</errorConditionFormula>
    <errorMessage>An end must be greater than or equal</errorMessage>
</ValidationRule>