force-app/main/default/objects/EMS_TM_Assignment__c/validationRules/Project_0_to_100_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_0_to_100_only</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    Project_Allocation__c &lt; 0,
    (Project_Allocation__c &gt; 100)
)</errorConditionFormula>
    <errorMessage>Project Allocation should accept values between 0 &amp; 100 only</errorMessage>
</ValidationRule>