force-app/main/default/objects/EMS_TM_Assignment__c/validationRules/start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date</fullName>
    <active>false</active>
    <errorConditionFormula>EMS_TM_EndDate_Asgn__c &lt; EMS_TM_StartDate_Asgn__c</errorConditionFormula>
    <errorMessage>An end must be greater than or equal</errorMessage>
</ValidationRule>