force-app/main/default/objects/EMS_TM_Assignment__c/validationRules/start_date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; EMS_TM_StartDate_Asgn__c &lt; EMS_TM_ProjectName_Asgn__r.EMS_TM_StartDate__c</errorConditionFormula>
    <errorMessage>Please ensure that the employee&apos;s assignment falls within the project&apos;s start and end dates.</errorMessage>
</ValidationRule>