force-app/main/default/objects/EMS_TM_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_EmployeeName__c</columns>
    <columns>EMS_TM_ProjectName_Asgn__c</columns>
    <columns>Resource_Status__c</columns>
    <columns>EMS_TM_AssignedAs__c</columns>
    <columns>EMS_TM_StartDate_Asgn__c</columns>
    <columns>EMS_TM_EndDate_Asgn__c</columns>
    <columns>EMS_TM_Status_Asgn__c</columns>
    <columns>EMS_TM_Billable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>