force-app/main/default/objects/EMS_TM_Assignment__c/listViews/All_Active_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Active_Assignments</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_ProjectName_Asgn__c</columns>
    <columns>EMS_TM_EmployeeName__c</columns>
    <columns>EMS_TM_Allocation__c</columns>
    <columns>EMS_TM_StartDate_Asgn__c</columns>
    <columns>EMS_TM_EndDate_Asgn__c</columns>
    <columns>EMS_TM_AssignedAs__c</columns>
    <columns>EMS_TM_Billable__c</columns>
    <columns>EMS_TM_Status_Asgn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EMS_TM_Status_Asgn__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Assignments</label>
</ListView>